ZezeJava: RocksRaft 增加 CollList, LogList; 一些细节改进